force-app/main/default/objects/Discount_Rule__mdt/Discount_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Discount Rule</label>
    <pluralLabel>Discount Rules</pluralLabel>
</CustomObject>