force-app/main/default/objects/Discount_Rule__mdt/fields/Adds_Perk__c.field-meta.xml
<CustomField><fullName>Adds_Perk__c</fullName><label>Adds Perk</label><type>Checkbox</type><defaultValue>false</defaultValue></CustomField>