force-app/main/default/objects/Discount_Rule__mdt/fields/Basket_Bump_Percent__c.field-meta.xml
<CustomField><fullName>Basket_Bump_Percent__c</fullName><label>Basket Bump Percent</label><type>Number</type><precision>4</precision><scale>0</scale></CustomField>