force-app/main/default/objects/Discount_Rule__mdt/fields/Buyer_Type__c.field-meta.xml
<CustomField><fullName>Buyer_Type__c</fullName><label>Buyer Type</label><type>Text</type><length>20</length></CustomField>