force-app/main/default/objects/Discount_Rule__mdt/fields/Channel__c.field-meta.xml
<CustomField><fullName>Channel__c</fullName><label>Channel</label><type>Text</type><length>30</length></CustomField>