force-app/main/default/objects/Discount_Rule__mdt/fields/Min_Basket__c.field-meta.xml
<CustomField><fullName>Min_Basket__c</fullName><label>Min Basket</label><type>Number</type><precision>9</precision><scale>2</scale></CustomField>