force-app/main/default/objects/Discount_Rule__mdt/fields/Percent__c.field-meta.xml
<CustomField><fullName>Percent__c</fullName><label>Percent</label><type>Number</type><precision>4</precision><scale>0</scale></CustomField>